--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-proxy-app",
+  "name": "my-vercel-proxy",
   "version": "1.0.0",
-  "type": "module"
+  "main": "index.js",
+  "license": "MIT"
 }
